# iMuve

./: README.txt  build.gradle  create imuve dll.cmd  gradle.properties  iMuve Footnotes.doc - collegamento.lnk  test servizi.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: imuve.db
app/src/main/assets/appdata/: MSN_TEST.dwg  MSN_TEST.dxf  PALAZZO DUCALE PIANO LOGGE.dwg  PALAZZO DUCALE piano TERZO AMM.dwg  PALAZZO DUCALE piano TERZO.dwg  PALAZZO DUCALE piano amm secondo.bak  PALAZZO DUCALE piano amm secondo.dwg  PALAZZO DUCALE piano amm terra.dwg  PALAZZO DUCALE piano ammezzato logge.dwg  PALAZZO DUCALE piano secondo.dwg  PALAZZO DUCALE piano sottotetto.dwg  PALAZZO DUCALE piano terra - originale.dwg  PALAZZO DUCALE piano terra.dwg  PALAZZO_DUCALE_PIANO_SECONDO.bak  PALAZZO_DUCALE_PIANO_SECONDO.dwg  PRIGIONI NUOVE piano amm terra.dwg  PRIGIONI NUOVE piano primo.dwg  PRIGIONI NUOVE piano terra.dwg  pd-floor1-2000-test.dwg  pd-floor1-2000-test2.dwg  pd-floor1-2000.dwg  pd-floor1-2004-test10.bak  pd-floor1-2004-test10.dwg  pd-floor1-2004-test11.bak  pd-floor1-2004-test11.dwg  pd-floor1-2004-test12.bak  pd-floor1-2004-test12.dwg  pd-floor1-2004-test3.bak  pd-floor1-2004-test3.dwg  pd-floor1-2004-test4.bak  pd-floor1-2004-test4.dwg  pd-floor1-2004-test5.bak  pd-floor1-2004-test5.dwg  pd-floor1-2004-test6.bak  pd-floor1-2004-test6.dwg  pd-floor1-2004-test7.bak  pd-floor1-2004-test7.dwg  pd-floor1-2004-test8.dwg  pd-floor1-2004-test9.bak  pd-floor1-2004-test9.dwg  (+10 more)
app/src/main/jni/: Android.mk  Application.mk  iMuveCPP.c  iMuveCPP.h
app/src/main/jni/Base64Encode/: Base64decode.cpp  base64decode.h
app/src/main/jni/c-sources/: Canvas.c  Canvas.h  ColorTable.c  Draw.c  Draw.h  dwg_utility.c  matrix.c  matrix.h  quat.c  quat.h  types.h  vector.c  vector.h
app/src/main/jni/lib-dwg-master/: bits.c  common.c  decode.c  decode_r2007.c  dwg.c  dwg.h  dwg.spec  encode.c  header_variables.spec  lib-dwg-master.rar  logging.c  logging.h  print.c
app/src/main/jni/spatialFilter/: spatialFilter.h
app/src/main/jni/utility/: OpenGLWrapper.c  OpenGLWrapper.h  WindowsToAndroid.h  WindowsToLinux.h  jni-gl-linux.h  memory_allocator.c  memory_allocator.h  triangulate.cpp  triangulate.h
app/src/main/res/drawable/: shape.xml  shape2.xml
app/src/main/res/layout/: activity_document_viewer.xml  activity_dwgviewer.xml  activity_interventi.xml  activity_interventi_manage.xml  activity_login.xml  activity_object_select.xml  activity_osmview.xml  activity_settings.xml  activity_vani.xml  activity_view_tables.xml  dwg_actionbar_item.xml  fragment_dwgviewer.xml  interventi_actionbar_item.xml  interventi_manage_actionbar_item.xml  rec_lv_12fields.xml  rec_lv_2field.xml  rec_lv_3fields.xml  rec_lv_9fields.xml  rec_lv_appinterventi.xml  simple_dropdown_item_right.xml
app/src/main/res/layout-xlarge/: activity_main.xml
app/src/main/res/menu/: menu_appvani.xml  (+7 more)
(+91 files in other folders)
